--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
 }
 
 .logo {
@@ -13,7 +17,11 @@
 
 ul {
   /* this removes the dots on the list items*/
+  padding: 0;
+  margin: 0;
   list-style-type: none;
+  display: flex;
+  gap: 1rem;
 }
 
 a {
@@ -22,4 +30,12 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.left-links {
+  margin-right: auto;
+}
+
+.right-links {
+  margin-left: auto;
 }
