--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,29 +1,80 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  align-items: center;
 }
 
-.footer {
-  height: 72px;
-  background: #eee;
-  color: darkmagenta;
+.title {
+  font-size: 2rem;
+  font-weight: 900;
+  margin-left: 16px;
+}
+
+.content-section {
+  flex: 1;
+  display: flex;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  padding: 16px;
+  flex: 1 0 300px;
+}
+
+.sidebar > ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+ul > li {
+  margin-bottom: 16px;
+}
+
+li > a {
+  text-decoration: none;
+  font-size: 24px;
+  color: #fefefe;
+}
+
+.main-content {
+  display: flex;
+  padding: 48px;
+  gap: 16px;
+  flex-wrap: wrap;
+  /* justify-content: space-evenly; */
+}
+
+.card {
+  flex: 0 0 300px;
+  padding: 16px;
+}
+
+.footer {
+  display: flex;
+  height: 72px;
+  background: #eee;
+  color: darkmagenta;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
   border-radius: 4px;
 }
